--- a/springboot-log4j2-log-demo/pom.xml
+++ b/springboot-log4j2-log-demo/pom.xml
@@ -47,6 +47,14 @@
             </exclusions>
         </dependency>
 
+        <!-- 热部署插件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- log4j2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
