--- a/springboot-mysql-demo/pom.xml
+++ b/springboot-mysql-demo/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- 热部署插件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
         <!-- HikariCP -->
         <dependency>
