--- a/springboot-redis-demo/pom.xml
+++ b/springboot-redis-demo/pom.xml
@@ -44,10 +44,15 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-redis</artifactId>
             <version>${redis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
         </dependency>
 
         <!-- lombok -->
