--- a/springboot-mp-demo/pom.xml
+++ b/springboot-mp-demo/pom.xml
@@ -10,11 +10,11 @@
     </parent>
 
     <groupId>com.ukayunnuo</groupId>
-    <artifactId>springboot-mysql-demo</artifactId>
+    <artifactId>springboot-mp-demo</artifactId>
     <version>1.0.0</version>
 
-    <name>springboot-mysql-demo</name>
-    <description>springboot 集成MySQL测试demo</description>
+    <name>springboot-mp-demo</name>
+    <description>springboot 集成MySQL MyBatis-Plus 测试demo</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
