--- a/springboot-rabbitmq-demo/src/main/resources/application-rabbitmq.yml
+++ b/springboot-rabbitmq-demo/src/main/resources/application-rabbitmq.yml
@@ -2,8 +2,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: guest
-    password: guest
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
     virtual-host: /
     # 手动提交消息
     listener:
