--- a/springboot-log4j2-log-demo/src/main/resources/application.yml
+++ b/springboot-log4j2-log-demo/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+    default-property-inclusion: non_null
 
 logging:
   config: classpath:log4j2.xml
