refactor: [springboot-elasticsearch-demo]

--- a/springboot-elasticsearch-demo/pom.xml
+++ b/springboot-elasticsearch-demo/pom.xml
@@ -35,10 +35,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- amqp -->
+        <!-- elasticsearch -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
 
 
