--- a/springboot-kafka-demo/src/main/resources/application-kafka.yml
+++ b/springboot-kafka-demo/src/main/resources/application-kafka.yml
@@ -1,23 +1,25 @@
-# 指定kafka server的地址，集群配多个，中间，逗号隔开
 spring:
   kafka:
-    bootstrap-servers: 192.168.0.18:32400,192.168.0.18:32401,192.168.0.18:32402
-  # 生产组配置
-  producer:
-    #重试次数
-    retries: 3
-    #批量发送的消息数量
-    batch-size: 1000
-    #32MB的批处理缓冲区
-    buffer-memory: 33554432
-    #消费者组配置
+    bootstrap-servers: localhost:9092
+    # 生产者配置
+    producer:
+      # 重试次数
+      retries: 3
+      #  批量提交
+      batch-size: 16384
+      # 缓存空间
+      buffer-memory: 33554432
+    # 消费者配置
     consumer:
-      group-id: crm-user-service
-      #最早未被消费的offset
-      auto-offset-reset: earliest
-      #批量一次最大拉取数据量
-      max-poll-records: 4000
-      #是否自动提交
-      enable-auto-commit: true
-      #自动提交时间间隔，单位ms
-      auto-commit-interval: 1000
+      group-id: springboot-kafka-demo
+      # 手动提交
+      enable-auto-commit: false
+      auto-offset-reset: latest
+      properties:
+        # 超时时间
+        session.timeout.ms: 60000
+    listener:
+      log-container-config: false
+      concurrency: 5
+      # 手动提交
+      ack-mode: MANUAL_IMMEDIATE
