--- a/springboot-kafka-demo/src/main/resources/application-kafka.yml
+++ b/springboot-kafka-demo/src/main/resources/application-kafka.yml
@@ -18,8 +18,12 @@ spring:
       properties:
         # 超时时间
         session.timeout.ms: 60000
+    # 监听
     listener:
+      # 类型: single/batch
+      type: batch
       log-container-config: false
+      # 分区
       concurrency: 5
       # 手动提交
       ack-mode: MANUAL_IMMEDIATE
