pref: 重命名 模块名称

--- a/springboot-mq-kafka-demo/src/main/resources/application-kafka.yml
+++ b/springboot-mq-kafka-demo/src/main/resources/application-kafka.yml
@@ -11,7 +11,7 @@ spring:
       buffer-memory: 33554432
     # 消费者配置
     consumer:
-      group-id: springboot-kafka-demo
+      group-id: springboot-mq-kafka-demo
       # 手动提交
       enable-auto-commit: false
       auto-offset-reset: latest
