--- a/springboot-mq-kafka-demo/src/main/resources/application.yml
+++ b/springboot-mq-kafka-demo/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8085
+  port: 8087
 
 spring:
   application:
-    name: springboot-rabbitmq-demo
+    name: springboot-mq-kafka-demo
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
     default-property-inclusion: non_null
   profiles:
     active:
-      - rabbitmq
+      - kafka
