--- a/springboot-mq-rabbitmq-demo/src/main/resources/application.yml
+++ b/springboot-mq-rabbitmq-demo/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8087
+  port: 8085
 
 spring:
   application:
-    name: springboot-kafka-demo
+    name: springboot-mq-rabbitmq-demo
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
     default-property-inclusion: non_null
   profiles:
     active:
-      - kafka
+      - rabbitmq
