--- a/springboot-mq-kafka-demo/pom.xml
+++ b/springboot-mq-kafka-demo/pom.xml
@@ -10,10 +10,10 @@
     </parent>
 
     <groupId>com.ukayunnuo</groupId>
-    <artifactId>springboot-kafka-demo</artifactId>
+    <artifactId>springboot-mq-kafka-demo</artifactId>
     <version>1.0.0</version>
 
-    <name>springboot-kafka-demo</name>
+    <name>springboot-mq-kafka-demo</name>
     <description>springboot 集成 kafka 消息中间件 测试模块</description>
     <properties>
         <java.version>1.8</java.version>
