--- a/springboot-orm-mybatis-plus-demo/pom.xml
+++ b/springboot-orm-mybatis-plus-demo/pom.xml
@@ -100,6 +100,13 @@
             <version>${hutool.version}</version>
         </dependency>
 
+        <!-- pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
