--- a/springboot-auth0-jwt-demo/src/main/resources/application-auth0-jwt.yml
+++ b/springboot-auth0-jwt-demo/src/main/resources/application-auth0-jwt.yml
@@ -2,10 +2,13 @@
 jwt:
   # 加密key
   key: "ukayunnuo"
-  # 过期时间 30 分钟
-  ttl: 1800000
   # 认证header头 字段
   authentication: "Authorization"
+  # 过期时间 30 分钟 (单位：秒)
+  expire-at: 1800
+  # token 白名单 url
+  white-token-uri:
+    - /jwt/demo/whiteTokenTest
 
 # redis配置
 spring:
