refactor: 【springboot 集成 集群 redis 实现hashtag 机制测试模块】

--- a/springboot-cluster-redis-hashtag-demo/pom.xml
+++ b/springboot-cluster-redis-hashtag-demo/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
