pref: 【springboot-orm-mybatis-plus-demo】

--- a/springboot-orm-mybatis-plus-demo/src/main/resources/spy.properties
+++ b/springboot-orm-mybatis-plus-demo/src/main/resources/spy.properties
@@ -26,4 +26,4 @@ driverlist=com.mysql.cj.jdbc.Driver
 outagedetection=true
 
 # 慢SQL记录标准（单位：秒）
-outagedetectioninterval=0.5
+outagedetectioninterval=1
