--- a/springboot-orm-mybatis-plus-demo/pom.xml
+++ b/springboot-orm-mybatis-plus-demo/pom.xml
@@ -106,6 +106,12 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.jsqlparser</groupId>
+                    <artifactId>jsqlparser</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
