--- a/springboot-orm-mybatis-plus-demo/pom.xml
+++ b/springboot-orm-mybatis-plus-demo/pom.xml
@@ -26,7 +26,7 @@
         <lombok.version>1.18.28</lombok.version>
         <fastjson2.version>2.0.34</fastjson2.version>
         <hutool.version>5.8.21</hutool.version>
-        <pagehelper.version>2.1.0</pagehelper.version>
+        <pagehelper.version>5.3.2</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -104,14 +104,8 @@
         <!-- pagehelper -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.github.jsqlparser</groupId>
-                    <artifactId>jsqlparser</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
     </dependencies>
