pref: 【springboot-elasticsearch-rest-client-demo】  集成 ES rest-client 模块

--- a/springboot-elasticsearch-rest-client-demo/src/main/resources/application-elasticsearch.yml
+++ b/springboot-elasticsearch-rest-client-demo/src/main/resources/application-elasticsearch.yml
@@ -23,5 +23,8 @@ spring:
       max-connect-per-route: 10
       # 最大连接总数量
       max-connect-total: 30
+      # 是否开启apikey 认证
+      auth-enable: false
+      api-key: VnVhQ2ZHY0JDZGJrUUSOWN2
 
 
