--- a/springboot-log-logstash-logback-demo/pom.xml
+++ b/springboot-log-logstash-logback-demo/pom.xml
@@ -14,7 +14,7 @@
     <version>1.0.0</version>
 
     <name>springboot-log-logstash-logback-demo</name>
-    <description>springboot 集成  logstash 日志采集 demo</description>
+    <description>springboot 集成 logstash 日志采集 demo</description>
     <properties>
         <java.version>1.8</java.version>
         <lombok.version>1.18.28</lombok.version>
@@ -50,6 +50,7 @@
             <version>${fastjson2.version}</version>
         </dependency>
 
+        <!-- logstash -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
